feat: sync i18n keys for header/sidebar and add multilingual footer/contacts

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -54,5 +54,9 @@
     "slogan_text": "Два народы — адна свабода",
     "conclusion_1": "Сёння яны разам будуюць фонд «Булварк», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага. Яны працуюць дзеля таго дня, калі можна будзе сказаць:",
     "conclusion_highlight": "«Мы вяртаемся. Мы будуем новую Беларусь!»"
+  },
+  "contacts": {
+    "title": "Кантакты",
+    "socials": "Мы ў сацсетках"
   }
 }
