--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -55,5 +55,9 @@
     "slogan_text": "Two nations — one freedom",
     "conclusion_1": "Today, they are building the Bulwark Fund together, uniting those who believe that freedom is everyone's right. They work for the day when they can say:",
     "conclusion_highlight": "'We are going back. We are building a new Belarus!'"
+  },
+  "contacts": {
+    "title": "Contacts",
+    "socials": "Social Media"
   }
 }
