--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -55,5 +55,9 @@
     "slogan_text": "Два народа — одна свобода",
     "conclusion_1": "Сегодня они вместе строят фонд «Булварк», объединяя тех, кто верит: свобода — это право каждого. Они работают ради того дня, когда можно будет сказать:",
     "conclusion_highlight": "«Мы возвращаемся. Мы строим новую Беларусь!»"
+  },
+  "contacts": {
+    "title": "Контакты",
+    "socials": "Мы в соцсетях"
   }
 }
