--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -55,5 +55,9 @@
     "slogan_text": "Два народи — одна свобода",
     "conclusion_1": "Сьогодні вони разом будують фонд «Булварк», об'єднуючи тих, хто вірить: свобода — це право кожного. Вони працюють заради того дня, коли можна буде сказати:",
     "conclusion_highlight": "«Ми повертаємося. Ми будуємо нову Білорусь!»"
+  },
+  "contacts": {
+    "title": "Контакти",
+    "socials": "Ми ў соцмережах"
   }
 }
