feat: update social links, redesign footer to 3-column layout, and add support channels

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -8,7 +8,7 @@
     "materials": "Матэрыялы",
     "news": "Навіны",
     "reports": "Справаздачы",
-    "history": "Гісторыя",
+    "history": "Наша гісторыя",
     "contacts": "Кантакты"
   },
   "sidebar": {
