feat: add i18n support for Header, Hero, About and History sections

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -1,18 +1,20 @@
 {
   "nav": {
+    "location": "Ukraine",
     "about": "Пра фонд",
-    "activity": "Дзейнасць",
-    "volunteers": "Дабраахвотнікам",
-    "partners": "Партнёрам",
-    "support": "Падтрымаць",
-    "materials": "Матэрыялы",
-    "news": "Навіны",
+    "projects": "Праекты",
+    "history_long": "Гістарычны экскурс",
     "reports": "Справаздачы",
-    "history": "Наша гісторыя",
+    "materials": "Матэрыялы",
+    "requisites": "Рэквізіты",
+    "vow": "Зарок ваяра",
+    "gallery": "Галерэя",
+    "news": "Навіны",
+    "help": "Дапамога",
+    "get_help": "Атрымаць дапамогу",
+    "be_partner": "Дапамагчы | Стаць партнёрам",
+    "support": "Падтрымаць",
     "contacts": "Кантакты"
-  },
-  "sidebar": {
-    "slogan": "Ваша надзейная абарона"
   },
   "hero": {
     "title_part1": "Ваша",
@@ -20,6 +22,9 @@
     "title_part3": "абарона",
     "description": "Дапамагаем тым, хто бароніць наш спакой. Фонд Bulwark — гэта празрыстасць, шчырасць і эфектыўная падтрымка.",
     "btn_get_help": "Атрымаць дапамогу"
+  },
+  "sidebar": {
+    "slogan": "Ваша надзейная абарона"
   },
   "about": {
     "tag": "Місія і візія",
@@ -40,74 +45,18 @@
     "tag": "Чалавечы фактар",
     "title": "Наша гісторыя",
     "alisa_label": "Аліса <br> Харкаў",
-    "vlad_label": "Улад (пазыўны «Соня») <br> Мінск",
+    "vlad_label": "Улад («Соня»)<br> Мінск",
     "link_youtube": "Глядзець фільм пра «Соню»",
     "link_viasna": "Гісторыя рэпрэсій",
-    "lead": "Гісторыя «Булварка» пачалася не ў офісе, а праз сустрэчу ўкраінкі з Харкава і беларускага добраахвотніка.",
+    "lead": "Гісторыя «Bulwark» пачалася не ў офісе, а праз сустрэчу ўкраінкі з Харкава і беларускага добраахвотніка.",
     "alisa_name": "Аліса Касенка",
-    "alisa_text": "нарадзілася ў Харкаве. Да 24 лютага 2022 года яна жыла звычайным жыццём, але пасля пачатку ўварвання прайшла праз абстрэлы і эвакуацыю. Яна вярнулася ва Украіну з цвёрдым рашэннем: гэта яе дом, і яна ні на што яго не абмяняе.",
+    "alisa_text": "нарадзілася ў Харкаве. Да 24 лютага 2022 года яна жыла звычайным жыццём, але пасля пачатку ўварвання прайшла праз абстрэлы і эвакуацыю. Яна вярнулася ва Украіну з цвёрдым рашэннем: гэта яе дом.",
     "vlad_intro": "Яе любімы чалавек,",
     "vlad_name": "Уладзіслаў Салавей (пазыўны «Соня»)",
-    "vlad_text": "родам з Мінска. У 2020 годзе ён прайшоў праз рэпрэсіі і катаванні ў Акрэсціне за ўдзел у мірных пратэстах. З пачаткам вялікай вайны ён без ваганняў паехаў ваяваць за свабоду Украіны і будучыню вольнай Беларусі.",
-    "vlad_path": "Улад прайшоў шлях ад пяхоцінца ў батальёне «Літвін» да камандзіра разведгрупы палка Каліноўскага. Зараз ён служыць у разведбаце брыгады «Хартыя».",
-    "slogan_label": "Наш лозунг:",
-    "slogan_text": "Два народы — адна свабода",
-    "conclusion_1": "Сёння яны разам будуюць фонд «Булварк», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага. Яны працуюць дзеля таго дня, калі можна будзе сказаць:",
+    "vlad_text": "родам з Мінска. У 2020 годзе ён прайшоў праз рэпрэсіі і катаванні ў Акрэсціне. З пачаткам вялікай вайны ён без ваганняў паехаў ваяваць за свабоду Украіны.",
+    "slogan_label": "Наш лозунг",
+    "slogan_text": "Два народы — <br class=\"hidden md:block\"> адна свабода",
+    "conclusion_1": "Сёння яны разам будуюць фонд «Bulwark», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага.",
     "conclusion_highlight": "«Мы вяртаемся. Мы будуем новую Беларусь!»"
-  },
-  "contacts": {
-    "title": "Кантакты",
-    "socials": "Мы ў сацсетках"
-  },
-  "activity": {
-    "tag": "Напрамкі працы",
-    "title": "Сістэмная дапамога",
-    "item1_title": "Прававы шчыт",
-    "item1_text": "Легалізацыя ў Украіне (ВНЖ, ПМЖ), аднаўленне дакументаў і абарона ад экстрадыцыі ці міжнароднага пераследу з боку рэжыму РБ.",
-    "item2_title": "Псіхалагічная опора",
-    "item2_text": "Тэрапія баявога стрэсу і ПТСР, праца з «пачуццём віны выжыўшага» і дапамога ў сацыяльнай адаптацыі пасля фронту.",
-    "item3_title": "Інвестыцыя ў будучыню",
-    "item3_text": "Захаванне чалавечага капіталу для новай Беларусі: падтрымка тых, хто стане лідарамі і будаўнікамі вольнай краіны заўтра."
-  },
-  "volunteers": {
-    "title": "Дапамога добраахвотнікам",
-    "crit1_title": "Для каго:",
-    "crit1_text": "Толькі для беларускіх добраахвотнікаў (дзейных вайскоўцаў і ветэранаў), якія ваююць ці ваявалі ў складзе УСУ / НГУ.",
-    "crit2_title": "Што даем:",
-    "crit2_text": "Кансультацыі па легалізацыі, аднаўленне дакументаў, прафесійная псіхалагічная падтрымка.",
-    "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус."
-  },
-  "partners": {
-    "title": "Як дапамагчы фонду",
-    "type1_title": "Донарам",
-    "type1_text": "Фінансавая падтрымка для аплаты працы юрыстаў, псіхолагаў і арэнды памяшканняў для трэнінгаў.",
-    "type2_title": "Экспертам",
-    "type2_text": "Калі вы юрыст, псіхолаг ці медыя-спецыяліст і гатовы кансультаваць pro bono (бясплатна) — далучайцеся.",
-    "type3_title": "Бізнесу",
-    "type3_text": "Зніжкі на паслугі для добраахвотнікаў, праграмы рэабілітацыі ці прадастаўленне лакацый для сустрэч.",
-    "cta": "Маеце прапанову? Напішыце нам",
-    "btn": "Стаць партнёрам"
-  },
-  "forms": {
-    "name_callsign": "Імя / Пазыўны",
-    "status": "Статус (дзейны / ветэран)",
-    "needs": "Якая менавіта дапамога патрэбна?",
-    "signal_tele": "Signal / Telegram для сувязі",
-    "org": "Арганізацыя / Імя",
-    "contact": "Email / Telegram",
-    "btn_request": "Адправіць запыт"
-  },
-  "materials": {
-    "title": "Навіны і справаздачнасць",
-    "more": "Больш ...",
-    "download": "Спампаваць PDF",
-    "news_1": "Запуск праграмы прававой падтрымкі",
-    "news_2": "Сустрэча з добраахвотнікамі «Хартыі»",
-    "news_3": "Новы чат-бот для кансультацый",
-    "news_4": "Расшырэнне сеткі псіхолагаў",
-    "rep_1": "Фінансавая справаздача 2023",
-    "rep_2": "Юрыдычныя кейсы: Студзень",
-    "rep_3": "Вынікі працы па легалізацыі",
-    "rep_4": "Псіхалагічная статыстыка"
   }
 }
