refactor: unify modal logic and integrate with news and materials

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -58,5 +58,49 @@
     "slogan_text": "Два народы — <br class=\"hidden md:block\"> адна свабода",
     "conclusion_1": "Сёння яны разам будуюць фонд «Bulwark», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага.",
     "conclusion_highlight": "«Мы вяртаемся. Мы будуем новую Беларусь!»"
+  },
+  "volunteers": {
+    "tag": "Дапамога",
+    "title": "Дапамога добраахвотнікам",
+    "crit1_title": "Для каго:",
+    "crit1_text": "Толькі для беларускіх добраахвотнікаў (дзейных вайскоўцаў і ветэранаў), якія ваююць ці ваявалі ў складзе УСУ / НГУ.",
+    "crit2_title": "Што даем:",
+    "crit2_text": "Кансультацыі па легалізацыі, аднаўленне дакументаў, прафесійная псіхалагічная падтрымка.",
+    "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус."
+  },
+  "forms": {
+    "name_callsign": "Імя / Пазыўны",
+    "status": "Статус (дзейны / ветэран)",
+    "needs": "Якая дапамога патрэбна?",
+    "signal_tele": "Signal / Telegram для сувязі",
+    "btn_request": "Адправіць запыт",
+    "org": "Арганізацыя / Імя",
+    "contact": "Email / Telegram"
+  },
+  "activity": {
+    "tag": "Напрамкі працы",
+    "title": "Сістэмная дапамога",
+    "item1_title": "Прававы шчыт",
+    "item1_text": "Легалізацыя ў Украіне, абарона ад экстрадыцыі і аднаўленне дакументаў для тых, хто застаўся без прававога статусу.",
+    "item2_title": "Псіхалагічная опора",
+    "item2_text": "Кваліфікаваная дапамога пры ПТСР, баявым стрэсе і адаптацыя воінаў да цывільнага жыцця.",
+    "item3_title": "Інвестыцыя ў будучыню",
+    "item3_text": "Падрыхтоўка кадравага рэзерву для новай Беларусі і запуск праграм гуманітарнай падтрымкі сем'яў добраахвотнікаў."
+  },
+  "partners": {
+    "title": "Як дапамагчы фонду",
+    "type1_title": "Донарам",
+    "type1_text": "Фінансавая падтрымка для аплаты працы юрыстаў, псіхолагаў і арэнды памяшканняў.",
+    "type2_title": "Экспертам",
+    "type2_text": "Калі вы юрыст ці псіхолаг і гатовы кансультаваць pro bono — далучайцеся.",
+    "type3_title": "Бізнесу",
+    "type3_text": "Зніжкі на паслугі, праграмы рэабілітацыі ці лакацыі для сустрэч.",
+    "cta": "Маеце прапанову? Напішыце нам",
+    "btn": "Стаць партнёрам"
+  },
+  "news": {
+    "title": "Апошнія падзеі",
+    "all_news_btn": "Усе навіны",
+    "read_more": "Чытаць цалкам"
   }
 }
