feat: implement full i18n support (BE/UK) for landing and modals
- Added i18next core logic with dynamic JSON loading
- Implemented language switcher with persistent state in localStorage
- Added 'data-i18n' attributes to:
    * Header (desktop and mobile navigation)
    * Hero, About, History, Volunteers, and Partners sections
    * Footer and common site slogans
- Refactored 'modalTemplates.js' to support dynamic translation of template literals
- Created 'be.json' and 'uk.json' with unified key structure
- Fixed mobile menu links and layout localization

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -13,10 +13,7 @@
     "help": "Дапамога",
     "get_help": "Атрымаць дапамогу",
     "be_partner": "Дапамагчы | Стаць партнёрам",
-    "support": "Падтрымаць",
-    "contacts": "Кантакты",
-    "donate": "Падтрымка",
-    "title": "Навігацыя"
+    "support": "Падтрымаць"
   },
   "hero": {
     "title_part1": "Ваша",
@@ -25,9 +22,7 @@
     "description": "Дапамагаем тым, хто бароніць наш спакой. Фонд Bulwark — гэта празрыстасць, шчырасць і эфектыўная падтрымка.",
     "btn_get_help": "Атрымаць дапамогу"
   },
-  "sidebar": {
-    "slogan": "Ваша надзейная абарона"
-  },
+
   "about": {
     "tag": "Місія і візія",
     "title_top": "Два народы",
@@ -46,18 +41,18 @@
   "history": {
     "tag": "Чалавечы фактар",
     "title": "Наша гісторыя",
+    "lead": "Гісторыя «Bulwark» пачалася не ў офісе, а праз сустрэчу ўкраінкі з Харкава і беларускага добраахвотніка.",
     "alisa_label": "Аліса <br> Харкаў",
     "vlad_label": "Улад («Соня»)<br> Мінск",
     "link_youtube": "Глядзець фільм пра «Соню»",
     "link_viasna": "Гісторыя рэпрэсій",
-    "lead": "Гісторыя «Bulwark» пачалася не ў офісе, а праз сустрэчу ўкраінкі з Харкава і беларускага добраахвотніка.",
     "alisa_name": "Аліса Касенка",
     "alisa_text": "нарадзілася ў Харкаве. Да 24 лютага 2022 года яна жыла звычайным жыццём, але пасля пачатку ўварвання прайшла праз абстрэлы і эвакуацыю. Яна вярнулася ва Украіну з цвёрдым рашэннем: гэта яе дом.",
     "vlad_intro": "Яе любімы чалавек,",
     "vlad_name": "Уладзіслаў Салавей (пазыўны «Соня»)",
     "vlad_text": "родам з Мінска. У 2020 годзе ён прайшоў праз рэпрэсіі і катаванні ў Акрэсціне. З пачаткам вялікай вайны ён без ваганняў паехаў ваяваць за свабоду Украіны.",
     "slogan_label": "Наш лозунг",
-    "slogan_text": "Два народы — <br class=\"hidden md:block\"> адна свабода",
+    "slogan_text": "Два народы — адна свабода",
     "conclusion_1": "Сёння яны разам будуюць фонд «Bulwark», аб'ядноўваючы тых, хто верыць: свабода — гэта права кожнага.",
     "conclusion_highlight": "«Мы вяртаемся. Мы будуем новую Беларусь!»"
   },
@@ -68,35 +63,39 @@
     "crit1_text": "Толькі для беларускіх добраахвотнікаў (дзейных вайскоўцаў і ветэранаў), якія ваююць ці ваявалі ў складзе УСУ / НГУ.",
     "crit2_title": "Што даем:",
     "crit2_text": "Кансультацыі па легалізацыі, аднаўленне дакументаў, прафесійная псіхалагічная падтрымка.",
-    "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус."
+    "warning": "Важна: Мы не займаемся зборам на зброю ці амуніцыю. Наша задача — ваш прававы і ментальны статус.",
+    "name_placeholder": "Імя / Пазыўны",
+    "status_select": "Статус (абярыце са спіса)",
+    "status_active": "Дзейны вайсковец",
+    "status_veteran": "Ветэран",
+    "needs_placeholder": "Якая дапамога патрэбна? (мін. 10 сімвалаў)",
+    "contact_placeholder": "Telegram @user або email",
+    "btn_send": "Адправіць запыт"
   },
   "forms": {
-    "name_callsign": "Імя / Пазыўны",
-    "status": "Статус (дзейны / ветэран)",
-    "needs": "Якая дапамога патрэбна?",
-    "signal_tele": "Signal / Telegram для сувязі",
-    "btn_request": "Адправіць запыт",
+    "success_toast": "✅ Адпраўлена!",
+    "error_toast": "❌ Памылка.",
+    "tg_help_title": "🆘 ЗАПЫТ НА ДАПАМОГУ",
+    "tg_partner_title": "🤝 НОВАЯ ПРАПАНОВА ПАРТНЁРСТВА",
+    "tg_name": "👤 Імя",
+    "tg_status": "🎖 Статус",
+    "tg_contact": "📱 Кантакт",
+    "tg_needs": "📝 Патрэба",
+    "tg_org": "🏢 Арганізацыя",
+    "tg_message": "💬 Паведамленне",
     "org": "Арганізацыя / Імя",
     "contact": "Email / Telegram",
-    "message": "Як мы можам супрацоўнічаць?"
+    "message": "Як мы можам супрацоўнічаць? (мін. 10 сімвалаў)"
   },
   "activity": {
     "tag": "Напрамкі працы",
     "title": "Сістэмная дапамога",
     "item1_title": "Прававы шчыт",
     "item1_text": "Легалізацыя ў Украіне, абарона ад экстрадыцыі і аднаўленне дакументаў для тых, хто застаўся без прававога статусу.",
-    "item2_title": "Псіхалагічная апора",
+    "item2_title": "Псіхалагічная опора",
     "item2_text": "Кваліфікаваная дапамога пры ПТСР, баявым стрэсе і адаптацыя воінаў да цывільнага жыцця.",
     "item3_title": "Інвестыцыя ў будучыню",
     "item3_text": "Падрыхтоўка кадравага рэзерву для новай Беларусі і запуск праграм гуманітарнай падтрымкі сем'яў добраахвотнікаў."
-  },
-  "donate": {
-    "title": "Фінансаванне перамогі",
-    "support_fund": "Падтрымаць фонд",
-    "support_fund_text": "Адміністрацыйныя выдаткі, юрыдычны шчыт, лагістыка і развіццё інстытуцыі. Трывалая база для нашай працы.",
-    "help_soldiers": "Дапамога байцам",
-    "help_soldiers_text": "Наўпроставая закупка рыштунку, медыцыны і тэхнічных сродкаў для беларускіх добраахвотнікаў на фронце.",
-    "requisites_btn": "Рэквізіты"
   },
   "partners": {
     "title": "Як дапамагчы фонду",
@@ -109,17 +108,43 @@
     "cta": "Маеце прапанову? Напішыце нам",
     "btn": "Стаць партнёрам"
   },
+
+  "donate": {
+    "title": "Фінансаванне перамогі",
+    "support_fund": "Падтрымаць фонд",
+    "support_fund_text": "Адміністрацыйныя выдаткі, юрыдычны шчыт, лагістыка і развіццё інстытуцыі. Трывалая база для нашай працы.",
+    "help_soldiers": "Дапамога байцам",
+    "help_soldiers_text": "Наўпроставая закупка рыштунку, медыцыны і тэхнічных сродкаў для беларускіх добраахвотнікаў на фронце.",
+    "requisites_btn": "Рэквізіты",
+    "alert_enter_amount": "Калі ласка, увядзіце суму",
+    "alert_redirect": "Пераход да аплаты:",
+    "alert_no_gateway": "(Тут будзе шлюз, калі падключым ключ)",
+    "quick_payment": "Хуткая аплата (UAH)",
+    "custom_amount": "Свая сума",
+    "pay_now": "Аплаціць зараз",
+    "redirect_note": "* вы будзеце перанакіраваны на старонку плацёжнага шлюза",
+    "bank_details": "Банкаўскія рэквізіты",
+    "purpose_title": "Абавязкова да запаўнення:",
+    "purpose_label": "Прызначэнне плацяжу:"
+  },
   "news": {
     "title": "Апошнія падзеі",
     "all_news_btn": "Усе навіны",
     "read_more": "Чытаць цалкам"
   },
-  "contacts": {
-    "title": "Кантакты",
-    "support_bot": "Support Bot",
-    "urgent_link": "Тэрміновая сувязь",
-    "confidential": "Канфідэнцыйна",
-    "privacy": "Палітыка прыватнасці",
+
+  "common": {
+    "slogan": "Ваша надзейная абарона"
+  },
+  "footer": {
+    "nav_title": "Навігацыя",
+    "privacy": "Privacy Policy",
     "cookies": "Cookies"
+  },
+  "modal": {
+    "print": "Друк",
+    "copy": "Капіяваць",
+    "copied": "Скапіявана!",
+    "close": "Закрыць"
   }
 }
