refactoring projects.html, add lang keys

--- a/public/locales/be.json
+++ b/public/locales/be.json
@@ -183,5 +183,62 @@
     "copyright_text": "Усе матэрыялы галерэі з'яўляюцца інтэлектуальнай уласнасцю Bulwark. Выкарыстанне гэтых матэрыялаў без дазволу забаронена.",
     "history_text": "Гэтыя кадры — жывая гісторыя барацьбы беларускіх добраахвотнікаў.",
     "victory_text": "Разам да перамогі."
+  },
+  "projects": {
+    "page_title": "Праекты | Bulwark",
+    "subtitle": "Чым мы займаемся",
+    "main_title": "Нашы праекты",
+    "apply_button": "Падаць заяўку",
+    "status": {
+      "active": "Актыўны",
+      "volunteers": "Набор валанцёраў"
+    },
+    "legal-shield": {
+      "title": "Прававы шчыт",
+      "category": "Прававая падтрымка",
+      "description": "Поўнае юрыдычнае суправаджэнне: ад атрымання ВНЖ да абароны ад міжнароднага вышуку і экстрадыцыі.",
+      "step1": "Легалізацыя (ВНЖ, ПМЖ, Грамадзянства)",
+      "step2": "Аднаўленне страчаных дакументаў",
+      "step3": "Кансультацыі па пераціку мяжы",
+      "step4": "Абарона ад Інтэрпола і экстрадыцыі"
+    },
+    "mental-support": {
+      "title": "Псіхалагічная апора",
+      "category": "Рэабілітацыя",
+      "description": "Кваліфікаваная дапамога ў пераадоленні наступстваў вайны, праца з ПТСР і адаптацыя да цывільнага жыцця.",
+      "step1": "Тэрапія баявога стрэсу",
+      "step2": "Пераадоленне пачуцця віны",
+      "step3": "Дапамога пры дэпрэсіі",
+      "step4": "Сацыяльная адаптацыя ветэранаў"
+    },
+    "addiction-recovery": {
+      "title": "Пераадоленне залежнасцяў",
+      "category": "Аднаўленне",
+      "description": "Канфідэнцыйная падтрымка для тых, хто сутыкнуўся з алкагольнай, наркатычнай або іншымі формамі залежнасці.",
+      "step1": "Кансультацыі спецыялістаў",
+      "step2": "Работа з прычынамі залежнасці",
+      "step3": "Падтрымка ў працэсе рэабілітацыі",
+      "step4": "Поўная ананімнасць"
+    },
+    "bulwark-hub": {
+      "title": "Валанцёрскі хаб",
+      "category": "Супольнасць",
+      "description": "Мы збіраем спецыялістаў, гатовых дапамагаць сваім вопытам: ад юрыстаў да SMM-асістэнтаў.",
+      "step1": "Юрыдычная дапамога",
+      "step2": "Псіхалагічныя кансультацыі",
+      "step3": "Копірайтынг і медыя",
+      "step4": "Інфармацыйная падтрымка"
+    },
+    "investment": {
+      "title_start": "Чаму гэта ",
+      "title_highlight": "інвестыцыя",
+      "title_end": " а не проста дапамога?",
+      "desc1": "Любая дыктатура канечная. Тыя, каму мы дапамагаем сёння — гэта архітэктары заўтрашняй Беларусі.",
+      "desc2": "Мы захоўваем кадравы рэзерв: будучых лідараў, прадпрымальнікаў і лекараў свабоднай краіны.",
+      "point1": "Бяспека рэгіёна",
+      "point2": "Ментальнае здароўе ветэранаў",
+      "point3": "Салідарнасць нацый",
+      "bg_text": "Future"
+    }
   }
 }
