--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -179,5 +179,63 @@
     "copyright_text": "Все материалы галереи являются интеллектуальной собственностью Bulwark. Использование этих материалов без разрешения запрещено.",
     "history_text": "Эти кадры — живая история борьбы белорусских добровольцев.",
     "victory_text": "Вместе к победе."
+  },
+
+  "projects": {
+    "page_title": "Проекты | Bulwark",
+    "subtitle": "Чем мы занимаемся",
+    "main_title": "Наши проекты",
+    "apply_button": "Подать заявку",
+    "status": {
+      "active": "Активен",
+      "volunteers": "Набор волонтеров"
+    },
+    "legal-shield": {
+      "title": "Правовой щит",
+      "category": "Юридическая поддержка",
+      "description": "Полное юридическое сопровождение: от получения ВНЖ до защиты от международного розыска и экстрадиции.",
+      "step1": "Легализация (ВНЖ, ПМЖ, Гражданство)",
+      "step2": "Восстановление утерянных документов",
+      "step3": "Консультации по пересечению границы",
+      "step4": "Защита от Интерпола и экстрадиции"
+    },
+    "mental-support": {
+      "title": "Психологическая опора",
+      "category": "Реабилитация",
+      "description": "Квалифицированная помощь в преодолении последствий войны, работа с ПТСР и адаптация к гражданской жизни.",
+      "step1": "Терапия боевого стресса",
+      "step2": "Преодоление чувства вины",
+      "step3": "Помощь при депрессии",
+      "step4": "Социальная адаптация ветеранов"
+    },
+    "addiction-recovery": {
+      "title": "Преодоление зависимостей",
+      "category": "Восстановление",
+      "description": "Конфиденциальная поддержка для тех, кто столкнулся с алкогольной, наркотической или другими формами зависимости.",
+      "step1": "Консультации специалистов",
+      "step2": "Работа с причинами зависимости",
+      "step3": "Поддержка в процессе реабилитации",
+      "step4": "Полная анонимность"
+    },
+    "bulwark-hub": {
+      "title": "Волонтерский хаб",
+      "category": "Сообщество",
+      "description": "Мы собираем специалистов, готовых помогать своим опытом: от юристов до SMM-ассистентов.",
+      "step1": "Юридическая помощь",
+      "step2": "Психологические консультации",
+      "step3": "Копирайтинг и медиа",
+      "step4": "Информационная поддержка"
+    },
+    "investment": {
+      "title_start": "Почему это ",
+      "title_highlight": "инвестиция",
+      "title_end": " а не просто помощь?",
+      "desc1": "Любая диктатура конечна. Те, кому мы помогаем сегодня — это архитекторы завтрашней Беларуси.",
+      "desc2": "Мы сохраняем кадровый резерв: будущих лидеров, предпринимателей и врачей свободной страны.",
+      "point1": "Безопасность региона",
+      "point2": "Ментальное здоровье ветеранов",
+      "point3": "Солидарность наций",
+      "bg_text": "Future"
+    }
   }
 }
