--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -179,5 +179,63 @@
     "copyright_text": "Усі матеріали галереї є інтелектуальною власністю Bulwark. Використання цих матеріалів без дозволу заборонено.",
     "history_text": "Ці кадри — жива історія боротьби білоруських добровольців.",
     "victory_text": "Разом да перемоги."
+  },
+
+  "projects": {
+    "page_title": "Проєкти | Bulwark",
+    "subtitle": "Чим ми займаємося",
+    "main_title": "Наші проєкти",
+    "apply_button": "Подати заявку",
+    "status": {
+      "active": "Активний",
+      "volunteers": "Набір волонтерів"
+    },
+    "legal-shield": {
+      "title": "Правовий щит",
+      "category": "Юридична підтримка",
+      "description": "Повний юридичний супровід: від отримання посвідки на проживання до захисту від міжнародного розшуку та екстрадиції.",
+      "step1": "Легалізація (ПНП, ПМП, Громадянство)",
+      "step2": "Відновлення втрачених документів",
+      "step3": "Консультації щодо перетину кордону",
+      "step4": "Захист від Інтерполу та екстрадиції"
+    },
+    "mental-support": {
+      "title": "Психологічна опора",
+      "category": "Реабілітація",
+      "description": "Кваліфікована допомога у подоланні наслідків війни, робота з ПТСР та адаптація до цивільного життя.",
+      "step1": "Терапія бойового стресу",
+      "step2": "Подолання почуття провини",
+      "step3": "Допомога при депресії",
+      "step4": "Соціальна адаптація ветеранів"
+    },
+    "addiction-recovery": {
+      "title": "Подолання залежностей",
+      "category": "Відновлення",
+      "description": "Конфіденційна підтримка для тих, хто зіткнувся з алкогольною, наркотичною або іншими формами залежності.",
+      "step1": "Консультації фахівців",
+      "step2": "Робота з причинамі залежності",
+      "step3": "Підтримка у процесі реабілітації",
+      "step4": "Повна анонімність"
+    },
+    "bulwark-hub": {
+      "title": "Волонтерський хаб",
+      "category": "Спільнота",
+      "description": "Ми збираємо фахівців, готових допомагати своїм досвідом: від юристів до SMM-асистентів.",
+      "step1": "Юридична допомога",
+      "step2": "Психологічні консультації",
+      "step3": "Копірайтинг та медіа",
+      "step4": "Інформаційна підтримка"
+    },
+    "investment": {
+      "title_start": "Чому це ",
+      "title_highlight": "інвестиція",
+      "title_end": " а не просто допомога?",
+      "desc1": "Будь-яка диктатура скінченна. Ті, кому ми допомагаємо сьогодні — це архітектори завтрашньої Білорусі.",
+      "desc2": "Ми зберігаємо кадровий резерв: майбутніх лідерів, підприємців та лікарів вільної країни.",
+      "point1": "Безпека регіону",
+      "point2": "Ментальне здоров'я ветеранів",
+      "point3": "Солідарність націй",
+      "bg_text": "Future"
+    }
   }
 }
