--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -172,7 +172,23 @@
     "title": "Контакты",
     "support_bot": "Бот поддержки",
     "urgent_link": "Срочная связь",
-    "confidential": "Конфиденциально"
+    "confidential": "Конфиденциально",
+    "page_title": "Контакты | Bulwark",
+    "subtitle": "Связаться и поддержать",
+    "main_title": "Контакты и реквизиты",
+    "sidebar_title": "Контакты",
+    "email_label": "Почта",
+    "phone_label": "Телефон / Signal",
+    "help_title": "Нужна помощь?",
+    "help_desc": "Для белорусских добровольцев: правовая поддержка, психологическая помощь, материальная поддержка.",
+    "open_bot": "Открыть Telegram-бот",
+    "open_signal": "Связаться через Signal",
+    "confidential_note": "*Конфиденциальность и безопасность гарантированы",
+    "fund_support": "Поддержать фонд",
+    "fighters_support": "Поддержать бойцов",
+    "payment_purpose_label": "Назначение платежа:",
+    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
+    "crypto_title": "Криптовалюты"
   },
   "gallery": {
     "title_page": "Галерея | Bulwark",
