--- a/public/locales/uk.json
+++ b/public/locales/uk.json
@@ -172,7 +172,23 @@
     "title": "Контакти",
     "support_bot": "Бот підтримки",
     "urgent_link": "Терміновий зв'язок",
-    "confidential": "Конфіденційно"
+    "confidential": "Конфіденційно",
+    "page_title": "Контакти | Bulwark",
+    "subtitle": "Зв'язатися та підтримати",
+    "main_title": "Контакти та реквізити",
+    "sidebar_title": "Контакти",
+    "email_label": "Пошта",
+    "phone_label": "Телефон / Signal",
+    "help_title": "Потрібна допомога?",
+    "help_desc": "Для білоруських добровольців: правова підтримка, психологічна допомога, матеріальна підтримка.",
+    "open_bot": "Відкрити Telegram-бот",
+    "open_signal": "Зв'язатися через Signal",
+    "confidential_note": "*Конфіденційність та безпека гарантовані",
+    "fund_support": "Підтримати фонд",
+    "fighters_support": "Підтримати бійців",
+    "payment_purpose_label": "Призначення платежу:",
+    "payment_purpose_value": "Благодійний внесок на виконання цілей БФ",
+    "crypto_title": "Криптовалюти"
   },
   "gallery": {
     "title_page": "Галерея | Bulwark",
